Big refactor, tested RMU code

--- a/notebooks/wmdp_ga_lat.ipynb
+++ b/notebooks/wmdp_ga_lat.ipynb
@@ -7,16 +7,12 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import random\n",
-    "import itertools\n",
-    "import torch\n",
     "import tqdm as tqdm\n",
-    "import wandb\n",
     "import sys\n",
     "import yaml\n",
     "import datetime\n",
     "\n",
-    "from typing import Union, Optional, List\n",
+    "from typing import Union, Optional\n",
     "from datasets import load_dataset, Dataset\n",
     "from dotenv import load_dotenv\n",
     "from omegaconf import OmegaConf\n",
@@ -36,9 +32,9 @@
     "from latent_at.laa import add_hooks, clear_hooks\n",
     "from latent_at.lat_methods import WMDPProjectedGradLAT\n",
     "from latent_at.wmdp.rmu.utils import get_data\n",
-    "from latent_at.utils import log_1_minus_p_loss\n",
     "from tasks.general_capabilities.multiple_choice_tasks import WMDPTask, MMLUTask\n",
     "from tasks.wmdp.WMDP_MCTask import WMDP_MCTask\n",
+    "from wmdp_utils import evaluate_during_training, eval_and_log, load_model\n",
     "\n",
     "load_dotenv()\n",
     "hf_access_token = os.getenv(\"HUGGINGFACE_API_KEY\")"
@@ -86,29 +82,6 @@
     "    \"ZEPHYR_7B\": \"HuggingFaceH4/zephyr-7b-beta\",\n",
     "    \"ZEPHYR_34B\": \"HuggingFaceH4/zephyr-34b-beta\",\n",
     "}\n",
-    "\n",
-    "\n",
-    "def load_model(hf_access_token):\n",
-    "    model = AutoModelForCausalLM.from_pretrained(\n",
-    "        \"meta-llama/Llama-2-7b-chat-hf\",\n",
-    "        torch_dtype=torch.bfloat16,\n",
-    "        token=hf_access_token,\n",
-    "        trust_remote_code=True,\n",
-    "        device_map=\"auto\",\n",
-    "    )\n",
-    "    tokenizer = AutoTokenizer.from_pretrained(\n",
-    "        \"meta-llama/Llama-2-7b-chat-hf\",\n",
-    "        token=hf_access_token,\n",
-    "        trust_remote_code=True,\n",
-    "        use_fast=False,\n",
-    "    )\n",
-    "\n",
-    "    tokenizer.pad_token_id = tokenizer.eos_token_id\n",
-    "    tokenizer.padding_side = \"left\"\n",
-    "    tokenizer.mask_token_id = tokenizer.eos_token_id\n",
-    "    tokenizer.sep_token_id = tokenizer.eos_token_id\n",
-    "    tokenizer.cls_token_id = tokenizer.eos_token_id\n",
-    "    return model, tokenizer\n",
     "\n",
     "\n",
     "model, tokenizer = load_model(hf_access_token)"
@@ -305,58 +278,6 @@
    "metadata": {},
    "source": [
     "## Set up trainer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def evaluate_during_training(config: OmegaConf, model: nn.Module) -> dict:\n",
-    "    \"\"\"Create right padded tokenizer specific to this evaluation method.\"\"\"\n",
-    "    tokenizer = AutoTokenizer.from_pretrained(\n",
-    "        model_dict[config.model_name], \n",
-    "        trust_remote_code=True, \n",
-    "        use_fast=False,\n",
-    "    )\n",
-    "    tokenizer.pad_token_id = tokenizer.eos_token_id\n",
-    "    tokenizer.padding_side = \"right\"\n",
-    "    tokenizer.truncation_side = \"right\"\n",
-    "    tokenizer.mask_token_id = tokenizer.eos_token_id\n",
-    "    tokenizer.sep_token_id = tokenizer.eos_token_id\n",
-    "    tokenizer.cls_token_id = tokenizer.eos_token_id\n",
-    "\n",
-    "    wmdp_scores = {}\n",
-    "    num_iters = 30\n",
-    "    print(f\"evaluating on sample size {16*num_iters}\")\n",
-    "    subtasks = [\"wmdp-bio\", \"wmdp-chem\", \"wmdp-cyber\"]\n",
-    "    for subtask in subtasks:\n",
-    "        wmdp = WMDP_MCTask(batch_size=16, tokenizer=tokenizer, subset=subtask)\n",
-    "        unlearned_accuracy = 0\n",
-    "        for _ in tqdm(range(num_iters)):\n",
-    "            unlearned_accuracy += wmdp.get_test_accuracy(model)\n",
-    "        wmdp_scores[subtask] = unlearned_accuracy / num_iters\n",
-    "    avg_wmdp_score = sum([abs(v) for v in wmdp_scores.values()])/len(wmdp_scores)\n",
-    "    print(wmdp_scores)\n",
-    "    \n",
-    "    left_tokenizer = AutoTokenizer.from_pretrained(\n",
-    "        model_dict[config.model_name], \n",
-    "        trust_remote_code=True, \n",
-    "        use_fast=False,\n",
-    "    )\n",
-    "    left_tokenizer.pad_token_id = tokenizer.eos_token_id\n",
-    "    left_tokenizer.padding_side = \"left\"\n",
-    "\n",
-    "    mmlu = MMLUTask()\n",
-    "    mmlu = mmlu.get_accuracy(model, tokenizer=left_tokenizer, temperature=0, batch_size=25, n_batches=40, verbose=False)\n",
-    "    combined_evals = wmdp_scores | {\"MMLU\": mmlu} | {\"pareto_score\": mmlu/ avg_wmdp_score}\n",
-    "\n",
-    "    return combined_evals\n",
-    "\n",
-    "def eval_and_log(result: dict[str, float], epoch) -> None:\n",
-    "    \"\"\"Used as callback function in training, so needs to be global and passed into class.\"\"\"\n",
-    "    wandb.log(result, step=epoch)"
    ]
   },
   {
