Support for KL, bug fixes in dataset loading

--- a/notebooks/latent_adversarial_attack.ipynb
+++ b/notebooks/latent_adversarial_attack.ipynb
@@ -35,12 +35,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[93m [WARNING] \u001B[0m async_io requires the dev libaio .so object and headers but these were not found.\n",
-      "\u001B[93m [WARNING] \u001B[0m async_io: please install the libaio-dev package with apt\n",
-      "\u001B[93m [WARNING] \u001B[0m If libaio is already installed (perhaps from source), try setting the CFLAGS and LDFLAGS environment variables to where it can be found.\n",
-      "\u001B[93m [WARNING] \u001B[0m Please specify the CUTLASS repo directory as environment variable $CUTLASS_PATH\n",
-      "\u001B[93m [WARNING] \u001B[0m sparse_attn requires a torch version >= 1.5 and < 2.0 but detected 2.3\n",
-      "\u001B[93m [WARNING] \u001B[0m using untested triton version (2.3.1), only 1.0.0 is known to be compatible\n"
+      "\u001b[93m [WARNING] \u001b[0m async_io requires the dev libaio .so object and headers but these were not found.\n",
+      "\u001b[93m [WARNING] \u001b[0m async_io: please install the libaio-dev package with apt\n",
+      "\u001b[93m [WARNING] \u001b[0m If libaio is already installed (perhaps from source), try setting the CFLAGS and LDFLAGS environment variables to where it can be found.\n",
+      "\u001b[93m [WARNING] \u001b[0m Please specify the CUTLASS repo directory as environment variable $CUTLASS_PATH\n",
+      "\u001b[93m [WARNING] \u001b[0m sparse_attn requires a torch version >= 1.5 and < 2.0 but detected 2.3\n",
+      "\u001b[93m [WARNING] \u001b[0m using untested triton version (2.3.1), only 1.0.0 is known to be compatible\n"
      ]
     }
    ],
@@ -201,7 +201,7 @@
     " \n",
     "lat_dataset = process_generic_chat_dataset(\n",
     "    tokenizer,\n",
-    "    dataset=\"Baidicoot/augmented_advbench_v4\",\n",
+    "    dataset=\"LLM-LAT/harmful-dataset\",\n",
     "    adv_column=\"rejected\",\n",
     "    def_column=\"chosen\",\n",
     "    split=\"train\",\n",
@@ -390,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
