Added previous LLaMa3 hyperparamters back

--- a/notebooks/jailbreaks.ipynb
+++ b/notebooks/jailbreaks.ipynb
@@ -73,17 +73,19 @@
     "if use_llama2:  # use llama2-7b\n",
     "    model_name = \"meta-llama/Llama-2-7b-chat-hf\"\n",
     "    adv_loss_coefs = {\"toward\": 0.5, \"away\": 0.5,}\n",
-    "    def_loss_coefs = {\"kl\": 0.1, \"toward\": 0.5, \"away\": 0.5,}\n",
+    "    def_loss_coefs = {\"sft\": 1.5, \"toward\": 0.5, \"away\": 0.5,}\n",
     "    inner_learning_rate = 5e-2\n",
-    "    outer_learning_rate = 8e-5\n",
+    "    outer_learning_rate = 2e-5\n",
     "    epsilon = 6.0\n",
+    "    add_completions_pgd = False\n",
     "else: # use llama3-8b\n",
     "    model_name = \"meta-llama/Meta-Llama-3-8B-Instruct\"\n",
     "    adv_loss_coefs = {\"toward\": 0.5, \"away\": 0.5,}\n",
     "    def_loss_coefs = {\"kl\": 0.1, \"toward\": 0.5, \"away\": 0.5,}\n",
     "    inner_learning_rate = 1e-3\n",
     "    outer_learning_rate = 8e-5\n",
-    "    epsilon = 6.0"
+    "    epsilon = 6.0\n",
+    "    add_completions_pgd = True"
    ]
   },
   {
@@ -359,7 +361,7 @@
     "    l2_regularization=0,  # coef for l2 weight regularization\n",
     "    model_layers_module=\"base_model.model.model.layers\",  # where the model layers are\n",
     "    reinitialize_dev_optim=True,  # whether to reinitialize optimizer every lat step,\n",
-    "    add_completions_pgd=True,  # Whether to add PGD over the completion tokens\n",
+    "    add_completions_pgd=add_completions_pgd,  # Whether to add PGD over the completion tokens\n",
     ")"
    ]
   },
